# i2c_multiplexer

./: CMakeLists.txt  README.md  main.cpp
multiplexerLib/: i2c_multiplexer.c  i2c_multiplexer.cpp
multiplexerLib/include/: i2c_multiplexer.h
